ci: Update ALL Dependencies -- Workflow Bot

--- a/packages/__utils/tsconfig.json
+++ b/packages/__utils/tsconfig.json
@@ -1,7 +1,7 @@
 {
     "compilerOptions": {
-        "esModuleInterop": true
+        "esModuleInterop": true,
     },
     "files": [],
-    "references": [{ "path": "./tsconfig.cjs.json" }, { "path": "./tsconfig.esm.json" }]
+    "references": [{ "path": "./tsconfig.cjs.json" }, { "path": "./tsconfig.esm.json" }],
 }
