--- a/packages/webview-ui/tsconfig.json
+++ b/packages/webview-ui/tsconfig.json
@@ -4,8 +4,8 @@
         "sourceMap": true,
         "strict": true,
         "rootDir": "src",
-        "outDir": "out"
+        "outDir": "out",
     },
     "include": ["src"],
-    "exclude": ["node_modules/*", "__sapper__/*", "public/*"]
+    "exclude": ["node_modules/*", "__sapper__/*", "public/*"],
 }
