--- a/tools/build-tools/tsconfig.json
+++ b/tools/build-tools/tsconfig.json
@@ -2,8 +2,8 @@
     "extends": "../../tsconfig.packages.base.json",
     "compilerOptions": {
         "outDir": "dist",
-        "rootDir": "src"
+        "rootDir": "src",
     },
     "include": ["src"],
-    "exclude": []
+    "exclude": [],
 }
