--- a/packages/__cspell-helper/tsconfig.json
+++ b/packages/__cspell-helper/tsconfig.json
@@ -5,8 +5,8 @@
         "module": "NodeNext",
         "moduleResolution": "NodeNext",
         "outDir": "dist",
-        "rootDir": "src"
+        "rootDir": "src",
     },
     "include": ["src"],
-    "exclude": []
+    "exclude": [],
 }
