--- a/packages/__locale-resolver/tsconfig.json
+++ b/packages/__locale-resolver/tsconfig.json
@@ -3,8 +3,8 @@
     "compilerOptions": {
         "types": ["node", "jest"],
         "outDir": "dist",
-        "rootDir": "src"
+        "rootDir": "src",
     },
     "include": ["src"],
-    "exclude": []
+    "exclude": [],
 }
