--- a/packages/_integrationTests/tsconfig.json
+++ b/packages/_integrationTests/tsconfig.json
@@ -3,7 +3,7 @@
     "compilerOptions": {
         "outDir": "./out",
         "esModuleInterop": true,
-        "types": ["node"]
+        "types": ["node"],
     },
-    "include": ["src"]
+    "include": ["src"],
 }
