--- a/packages/_server/tsconfig.json
+++ b/packages/_server/tsconfig.json
@@ -2,7 +2,7 @@
     "extends": "../../tsconfig.packages.base.json",
     "compilerOptions": {
         "outDir": "./dist",
-        "types": ["node"]
+        "types": ["node"],
     },
-    "include": ["src"]
+    "include": ["src"],
 }
