--- a/packages/_serverPatternMatcher/tsconfig.json
+++ b/packages/_serverPatternMatcher/tsconfig.json
@@ -3,7 +3,7 @@
     "compilerOptions": {
         "outDir": "./dist",
         "types": ["node"],
-        "moduleResolution": "Node16"
+        "moduleResolution": "Node16",
     },
-    "include": ["src"]
+    "include": ["src"],
 }
