--- a/packages/client/tsconfig.json
+++ b/packages/client/tsconfig.json
@@ -6,8 +6,8 @@
         "types": ["node"],
         "target": "ESNext",
         "module": "Node16",
-        "moduleResolution": "Node16"
+        "moduleResolution": "Node16",
     },
     "include": ["src"],
-    "exclude": []
+    "exclude": [],
 }
