--- a/packages/json-rpc-api/tsconfig.json
+++ b/packages/json-rpc-api/tsconfig.json
@@ -1,8 +1,8 @@
 {
     "extends": "@tsconfig/node18",
     "compilerOptions": {
-        "verbatimModuleSyntax": true
+        "verbatimModuleSyntax": true,
     },
     "files": [],
-    "references": [{ "path": "./tsconfig.cjs.json" }, { "path": "./tsconfig.esm.json" }]
+    "references": [{ "path": "./tsconfig.cjs.json" }, { "path": "./tsconfig.esm.json" }],
 }
