--- a/packages/utils-disposables/tsconfig.json
+++ b/packages/utils-disposables/tsconfig.json
@@ -11,7 +11,7 @@
         "declaration": true,
         "declarationMap": true,
         "rootDir": "./src",
-        "strict": true
+        "strict": true,
     },
-    "include": ["./src"]
+    "include": ["./src"],
 }
