--- a/packages/webview-api/tsconfig.json
+++ b/packages/webview-api/tsconfig.json
@@ -7,7 +7,7 @@
         "declarationMap": true,
         "sourceMap": true,
         "rootDir": "./src",
-        "strict": true
+        "strict": true,
     },
-    "include": ["./src"]
+    "include": ["./src"],
 }
